Fix Cairo comment token

--- a/languages.toml
+++ b/languages.toml
@@ -1408,7 +1408,7 @@ scope = "source.cairo"
 injection-regex = "cairo"
 file-types = ["cairo"]
 roots = []
-comment-token = "#"
+comment-token = "//"
 indent = { tab-width = 4, unit = "    " }
 
 [[grammar]]
