--- a/runtime/themes/kanagawa.toml
+++ b/runtime/themes/kanagawa.toml
@@ -70,7 +70,7 @@ hint = "dragonBlue"
 "special" = "peachRed"
 
 ## Markup modifiers
-"markup.heading.marker" = "fujiGrey"
+"markup.heading.marker" = "fujiGray"
 "markup.heading.1" = { fg = "surimiOrange", modifiers = ["bold"] }
 "markup.heading.2" = { fg = "carpYellow", modifiers = ["bold"] }
 "markup.heading.3" = { fg = "waveAqua2", modifiers = ["bold"] }
