--- a/helix-view/Cargo.toml
+++ b/helix-view/Cargo.toml
@@ -20,6 +20,7 @@ helix-core = { version = "0.6", path = "../helix-core" }
 helix-loader = { version = "0.6", path = "../helix-loader" }
 helix-lsp = { version = "0.6", path = "../helix-lsp" }
 helix-dap = { version = "0.6", path = "../helix-dap" }
+helix-vte = { version = "0.1", path = "../helix-vte" }
 crossterm = { version = "0.25", optional = true }
 
 # Conversion traits
@@ -42,6 +43,7 @@ toml = "0.5"
 log = "~0.4"
 
 which = "4.2"
+alacritty_terminal = "0.17.0"
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = { version = "4.4", features = ["std"] }
