--- a/languages.toml
+++ b/languages.toml
@@ -1859,6 +1859,16 @@ name = "wast"
 source = { git = "https://github.com/wasm-lsp/tree-sitter-wasm", rev = "2ca28a9f9d709847bf7a3de0942a84e912f59088", subpath = "wast" }
 
 [[language]]
+name = "move"
+scope = "source.move"
+injection-regex = "move"
+file-types = ["move"]
+roots = ["Move.toml"]
+comment-token = "//"
+language-server = { command = "move-analyzer" }
+indent = { tab-width = 4, unit = "    " }
+
+[[language]]
 name = "d"
 scope = "source.d"
 file-types = [ "d", "dd" ]
