--- a/runtime/themes/catppuccin_latte.toml
+++ b/runtime/themes/catppuccin_latte.toml
@@ -1,19 +1,19 @@
 # Syntax highlighting
 # -------------------
 "type" = "yellow"
-"type.enum.variant" = "peach"
 
 "constructor" = "sapphire"
 
 "constant" = "peach"
+"constant.builtin" = "peach"
 "constant.character" = "teal"
 "constant.character.escape" = "pink"
 
 "string" = "green"
 "string.regexp" = "peach"
-"string.special" = "pink"
+"string.special" = "blue"
 
-"comment" = { fg = "overlay1", modifiers = ["italic"] }
+"comment" = { fg = "surface2", modifiers = ["italic"] }
 
 "variable" = "text"
 "variable.parameter" = { fg = "maroon", modifiers = ["italic"] }
@@ -23,6 +23,7 @@
 "label" = "sapphire" # used for lifetimes
 
 "punctuation" = "overlay2"
+"punctuation.special" = "sky"
 
 "keyword" = "mauve"
 "keyword.control.conditional" = { fg = "mauve", modifiers = ["italic"] }
@@ -31,9 +32,10 @@
 
 "function" = "blue"
 "function.builtin" = "peach"
-"function.macro" = "teal"
+"function.macro" = "mauve"
 
 "tag" = "mauve"
+"attribute" = { fg = "teal", modifiers = ["italic"] }
 
 "namespace" = { fg = "blue", modifiers = ["italic"] }
 
@@ -49,30 +51,31 @@
 "markup.list" = "mauve"
 "markup.bold" = { modifiers = ["bold"] }
 "markup.italic" = { modifiers = ["italic"] }
-"markup.link.url" = { fg = "peach", modifiers = ["underlined"] }
+"markup.link.url" = { fg = "rosewater", modifiers = ["italic", "underlined"] }
 "markup.link.text" = "blue"
 "markup.raw" = "flamingo"
 
 "diff.plus" = "green"
 "diff.minus" = "red"
-"diff.delta" = "yellow"
+"diff.delta" = "blue"
 
 # User Interface
 # --------------
 "ui.background" = { fg = "text", bg = "base" }
+"ui.background.separator" = { fg = "text" }
 
-"ui.linenr" = { fg = "surface1" }
+"ui.linenr" = { fg = "base0" }
 "ui.linenr.selected" = { fg = "lavender" }
 
-"ui.statusline" = { fg = "overlay1", bg = "surface0" }
-"ui.statusline.inactive" = { fg = "overlay1", bg = "mantle" }
-"ui.statusline.normal" = { fg = "surface0", bg = "lavender", modifiers = ["bold"] }
-"ui.statusline.insert" = { fg = "surface0", bg = "green", modifiers = ["bold"]  }
-"ui.statusline.select" = { fg = "surface0", bg = "flamingo", modifiers = ["bold"]  }
+"ui.statusline" = { fg = "text", bg = "mantle" }
+"ui.statusline.inactive" = { fg = "surface2", bg = "mantle" }
+"ui.statusline.normal" = { fg = "base", bg = "lavender", modifiers = ["bold"] }
+"ui.statusline.insert" = { fg = "base", bg = "green", modifiers = ["bold"]  }
+"ui.statusline.select" = { fg = "base", bg = "flamingo", modifiers = ["bold"]  }
 
-"ui.bufferline" = { fg = "overlay2", bg = "surface1", modifiers = ["italic"] }
-"ui.bufferline.active" = { fg = "text", bg = "surface0", modifiers = ["bold"] }
-"ui.bufferline.background" = { bg = "surface1" }
+"ui.bufferline" = { fg = "surface1", bg = "mantle" }
+"ui.bufferline.active" = { fg = "text", bg = "base", modifiers = ["bold", "italic"] }
+"ui.bufferline.background" = { bg = "surface0" }
 
 "ui.popup" = { fg = "text", bg = "surface0" }
 "ui.window" = { fg = "crust" }
@@ -92,13 +95,18 @@
 "ui.cursor.match" = { fg = "peach", modifiers = ["bold"] }
 
 "ui.cursorline.primary" = { bg = "cursorline" }
+"ui.cursorcolumn.primary" = { bg = "cursorline" }
 
-"ui.highlight" = { bg = "surface1" }
+"ui.highlight" = { bg = "surface1", modifiers = ["bold"] }
 
 "ui.menu" = { fg = "overlay2", bg = "surface0" }
 "ui.menu.selected" = { fg = "text", bg = "surface1", modifiers = ["bold"] }
 
 diagnostic = { modifiers = ["underlined"] }
+"diagnostic.error" = "red"
+"diagnostic.warn" = "yellow"
+"diagnostic.info" = "sky"
+"diagnostic.hint" = "teal"
 
 error = "red"
 warning = "yellow"
