fix color hex to correct
Co-authored-by: ChrHorn <christoph-horn@hotmail.de>

--- a/runtime/themes/catppuccin_frappe.toml
+++ b/runtime/themes/catppuccin_frappe.toml
@@ -6,7 +6,7 @@ inherits = "catppuccin_latte"
 
 [palette]
 # catppuccin frappe palette colors
-rosewater = "#f2dbcf"
+rosewater = "#f2d5cf"
 flamingo = "#eebebe"
 pink = "#f4b8e4"
 mauve = "#ca9ee6"
