add switch case by kind functions

--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -67,6 +67,9 @@ serde = { version = "1.0", features = ["derive"] }
 grep-regex = "0.1.10"
 grep-searcher = "0.1.10"
 
+# case conversion
+heck = "0.4.0"
+
 [target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
 signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
 
