Enable elixir-ls for heex language

--- a/languages.toml
+++ b/languages.toml
@@ -1355,6 +1355,7 @@ injection-regex = "heex"
 file-types = ["heex"]
 roots = ["mix.exs", "mix.lock"]
 indent = { tab-width = 2, unit = "  " }
+language-server = { command = "elixir-ls" }
 
 [[grammar]]
 name = "heex"
