Add ui.virtual.whitespace to zenburn theme

--- a/runtime/themes/zenburn.toml
+++ b/runtime/themes/zenburn.toml
@@ -31,6 +31,7 @@
 "label" = { fg = "#dfcfaf", modifiers = ["underlined"] }
 "ui.help" = { fg = "white", bg = "black" }
 "ui.virtual.ruler" = { bg = "#484848" }
+"ui.virtual.whitespace" = { fg = "#5b605e", modifiers = ["bold"]}
 
 "punctuation.delimiter" = "#8f8f8f"
 
