--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -19,11 +19,16 @@ jobs:
     - name: Install nix
       uses: cachix/install-nix-action@v18
 
+    - name: Print toolchain regex
+      id: print-toolchain-regex
+      run: echo "TOOLCHAIN_REGEX=$(nix show-derivation .#default.rustToolchain.cargo < /dev/null | jq -r '.[].env.paths' | tr ' ' '|')" >> "$GITHUB_OUTPUT"
+
     - name: Authenticate with Cachix
       uses: cachix/cachix-action@v12
       with:
         name: helix
         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        pushFilter: ^(${{ steps.print-toolchain-regex.outputs.TOOLCHAIN_REGEX }}|.*-source|.*nixpkgs\.tar\.gz)$
 
     - name: Build nix flake
       run: nix build -L
